[package]
name = "actix"
version = "0.13.1"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "fakeshadow <24548779@qq.com>",
]
description = "Actor framework for Rust"
keywords = ["actor", "futures", "actix", "async", "tokio"]
repository = "https://github.com/imededin/actix"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2021"


[badges]
maintenance.status = "passively-maintained"

[lib]
name = "actix"
path = "src/lib.rs"

[features]

	tokio   = [ "actix-rt/tokio" ]
	wasm    = [ "actix-rt/wasm"  ]

	# Adds assertion to prevent processing too many messages on event loop
	mailbox_assert = []

[dependencies]

	# actix-rt          = { path = "../actix-net/actix-rt", default-features = false }
	actix-rt          = { git = "https://github.com/najamelan/actix-net", branch =  "feature/wasm-runtime", default-features = false }

	actix_derive      = "0.4"
	bytes             = "0.4"
	crossbeam-channel = "0.3"
	derive_more       = "0.14.0"
	futures           = "0.1"
	hashbrown         = "0.1.8"
	log               = "0.4"
	lazy_static       = "1.2"
	bitflags          = "1.0"
	smallvec          = "0.6"
	parking_lot       = "0.7"
	tokio-timer       = "0.2.8"

[dev-dependencies]
doc-comment = "0.3"
futures-util = { version = "0.3.22", default-features = false, features = ["alloc"] }

