[package]
name = "actix"
version = "0.13.1"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "fakeshadow <24548779@qq.com>",
]
description = "Actor framework for Rust"
keywords = ["actor", "futures", "actix", "async", "tokio"]
repository = "https://github.com/imededin/actix"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2021"


[badges]
maintenance.status = "passively-maintained"

[lib]
name = "actix"
path = "src/lib.rs"

[features]

	tokio   = [ "actix-rt/tokio" ]
	wasm    = [ "actix-rt/wasm"  ]

	# Adds assertion to prevent processing too many messages on event loop
	mailbox_assert = []

[dependencies]

	# actix-rt          = { path = "../actix-net/actix-rt", default-features = false }
	actix-rt          = { git = "https://github.com/imededin/actix-net.git", branch =  "master", default-features = false }

	derive_more       = "0.14.0"
	hashbrown         = "0.1.8"
	lazy_static       = "1.2"
	tokio-timer       = "0.2.8"
 	actix-macros = { version = "0.2", optional = true }
actix_derive = { version = "0.6", optional = true }

bitflags = "2"
bytes = "1"
crossbeam-channel = "0.5"
futures-core = { version = "0.3.22", default-features = false }
futures-sink = { version = "0.3.22", default-features = false }
futures-task = { version = "0.3.22", default-features = false }
futures-util = { version = "0.3.22", default-features = false }
log = "0.4"
once_cell = "1.5"
parking_lot = "0.12"
pin-project-lite = "0.2"
smallvec = "1.6.1"
tokio = { version = "1", features = ["io-util", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }


[dev-dependencies]
doc-comment = "0.3"
futures-util = { version = "0.3.22", default-features = false, features = ["alloc"] }

